@@ -1,0 +1,31 @@
+#release configuration
+#Tue Jan 07 13:50:16 GMT 2014
+scm.commentPrefix=[maven-release-plugin] 
+project.rel.org.headsupdev.agile\:agile-framework=2.1
+project.rel.org.headsupdev.agile\:agile-app-search=2.1
+project.rel.org.headsupdev.agile\:agile-security=2.1
+project.rel.org.headsupdev.agile\:agile-api=2.1
+project.rel.org.headsupdev.agile\:agile-core=2.1
+project.rel.org.headsupdev.agile\:agile-app-history=2.1
+project.rel.org.headsupdev.agile\:agile-app-docs=2.1
+project.rel.org.headsupdev.agile\:agile-app-issues=2.1
+scm.tag=agile-2.1
+remoteTagging=true
+project.rel.org.headsupdev.agile\:agile-app-milestones=2.1
+project.rel.org.headsupdev.agile\:agile-app-builds=2.1
+project.rel.org.headsupdev.agile\:agile-app-files=2.1
+exec.additionalArguments=-P default
+project.rel.org.headsupdev.agile\:agile-runtime=2.1
+project.rel.org.headsupdev.agile\:agile=2.1
+project.rel.org.headsupdev.agile\:agile-apps=2.1
+scm.url=scm\:git\:git@github.com\:headsupdev/agile.git
+project.rel.org.headsupdev.agile\:agile-app-admin=2.1
+project.rel.org.headsupdev.agile\:agile-osgi-settings=2.1
+project.rel.org.headsupdev.agile\:agile-storage=2.1
+preparationGoals=clean verify
+project.rel.org.headsupdev.agile\:agile-scm=2.1
+project.rel.org.headsupdev.agile\:agile-web=2.1
+project.rel.org.headsupdev.agile\:agile-app-artifacts=2.1
+project.rel.org.headsupdev.agile\:agile-app-dashboard=2.1
+project.rel.org.headsupdev.agile\:agile-runtime-controller=2.1
+completedPhase=input-variables
